[project]
name = "aws-developer-day-trustworthy-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "cleanlab-codex~=1.0.12",
  "cleanlab-tlm~=1.0.20",
  "boto3~=1.37.22",
  "gradio~=5.24.0",
  "python-dotenv~=1.1.0",
  "certifi>=2025.1.31",
]

[tool.ruff]
line-length = 120
lint.select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # whitespace at EOL, empty line, and missing newline at EOF
  "W291",
  "W292",
  "W293",
]

[dependency-groups]
dev = [
  "mypy~=1.15.0",
  "ruff~=0.11.4",
]
